// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <div
        className="checkbox  form-group"
      >
        <div
          className="form-check"
        >
          <input
            autoFocus={false}
            checked={false}
            className="form-check-input position-static"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field 2`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <div
        className="checkbox  form-group"
      >
        <div
          className="form-check"
        >
          <input
            autoFocus={false}
            checked={false}
            className="form-check-input position-static"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <div
        className="form-group"
      >
        <form
          className=""
        >
          <div
            className="bg-transparent border-0 custom-control custom-checkbox"
          >
            <input
              autoFocus={false}
              checked={false}
              className="custom-control-input"
              disabled={false}
              id="root_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <label
              className="custom-control-label"
              htmlFor="root_0"
              title=""
            >
              foo
            </label>
          </div>
        </form>
        <form
          className=""
        >
          <div
            className="bg-transparent border-0 custom-control custom-checkbox"
          >
            <input
              autoFocus={false}
              checked={false}
              className="custom-control-input"
              disabled={false}
              id="root_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <label
              className="custom-control-label"
              htmlFor="root_1"
              title=""
            >
              bar
            </label>
          </div>
        </form>
        <form
          className=""
        >
          <div
            className="bg-transparent border-0 custom-control custom-checkbox"
          >
            <input
              autoFocus={false}
              checked={false}
              className="custom-control-input"
              disabled={false}
              id="root_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <label
              className="custom-control-label"
              htmlFor="root_2"
              title=""
            >
              fuzz
            </label>
          </div>
        </form>
        <form
          className=""
        >
          <div
            className="bg-transparent border-0 custom-control custom-checkbox"
          >
            <input
              autoFocus={false}
              checked={false}
              className="custom-control-input"
              disabled={false}
              id="root_3"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="checkbox"
            />
            <label
              className="custom-control-label"
              htmlFor="root_3"
              title=""
            >
              qux
            </label>
          </div>
        </form>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <div
                  className="mb-0 form-group"
                >
                  <label
                    className="form-label"
                    htmlFor="root_my-field"
                  >
                    my-field
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <small
                  className="text-muted form-text"
                >
                  some description
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <div
                  className="mb-0 form-group"
                >
                  <label
                    className="form-label"
                    htmlFor="root_my-field"
                  >
                    my-field
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_my-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <small
                  className="text-muted form-text"
                >
                  some other description
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="color"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="date"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="datetime-local"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="d-none row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <input
                  id="root_my-field"
                  type="hidden"
                  value=""
                />
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-null"
  >
    <div
      className="form-group"
    >
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          step="any"
          type="number"
          value={0}
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          step="any"
          type="number"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="password"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="d-block form-label"
        >
          
        </label>
        <div
          className="form-check"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id="Yes"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value={true}
          />
          <label
            className="form-check-label"
            htmlFor="Yes"
            title=""
          >
            Yes
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id="No"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value={false}
          />
          <label
            className="form-check-label"
            htmlFor="No"
            title=""
          >
            No
          </label>
        </div>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields schema examples 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          list="examples_root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
        <datalist
          id="examples_root"
        >
          <option
            value="Firefox"
          />
          <option
            value="Chrome"
          />
          <option
            value="Opera"
          />
          <option
            value="Vivaldi"
          />
          <option
            value="Safari"
          />
        </datalist>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <select
          autoFocus={false}
          className="custom-select"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            value=""
          >
            
          </option>
          <option
            disabled={false}
            id="foo"
            value="foo"
          >
            foo
          </option>
          <option
            disabled={false}
            id="bar"
            value="bar"
          >
            bar
          </option>
        </select>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-integer"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          max={100}
          min={42}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          step={1}
          type="number"
          value={75}
        />
        <span
          className="range-view"
        >
          75
        </span>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control-file"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="file"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="email"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="url"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="placeholder"
          readOnly={false}
          type="text"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        htmlFor="root"
      >
        
      </label>
      <div
        className="input-group"
      >
        <textarea
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          rows={5}
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      <div
        className="my-1"
        id="root-title"
      >
        <h5>
          Titre 1
        </h5>
        <hr
          className="border-0 bg-secondary"
          style={
            Object {
              "height": "1px",
            }
          }
        />
      </div>
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <div
                  className="mb-0 form-group"
                >
                  <label
                    className="form-label"
                    htmlFor="root_title"
                  >
                    Titre 2
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_title"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-undefined"
  >
    <div
      className="form-group"
    >
      <div
        className="unsupported-field"
      >
        <p>
          Unsupported field schema
          <span>
             for
             field 
            <code>
              root
            </code>
          </span>
          <em>
            : 
            Unknown field type undefined
          </em>
          .
        </p>
        <pre>
          {}
        </pre>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="number"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <div
        className="mb-0 form-group"
      >
        <label
          className="form-label"
          htmlFor="root"
        />
        <input
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
